# Thor2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
applications/: CMakeLists.txt
applications/LearnMetalCpp/: CMakeLists.txt  MetalContext.cpp  MetalContext.h  MetalMath.cpp  MetalMath.h  MetalRenderer.cpp  MetalRenderer.h  MetalRendererSample0.cpp  MetalRendererSample0.h  MetalRendererSample1.cpp  MetalRendererSample1.h  MetalRendererSample2.cpp  MetalRendererSample2.h  MetalRendererSample3.cpp  MetalRendererSample3.h  MetalRendererSample4.cpp  MetalRendererSample4.h  MetalRendererSample5.cpp  MetalRendererSample5.h  MetalRendererSample6.cpp  MetalRendererSample6.h  MetalRendererSample7.cpp  MetalRendererSample7.h  MetalRendererSample8.cpp  MetalRendererSample8.h  MetalViewDelegate.mm  Sample1.metal  Sample2.metal  Sample3.metal  Sample4.metal  Sample5.metal  Sample6.metal  Sample7.metal  Sample8.metal  Shared4.h  Shared5.h  Shared6.h  Shared8.h
applications/MetalByExample/: CMakeLists.txt  MetalRenderer.mm  Shaders.metal
applications/MetalByExample/ios/: ViewController.h  ViewController.mm  main.m
applications/MetalByExample/ios/Assets.xcassets/LaunchImage.launchimage/: Contents.json
applications/MetalByExample/macOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
applications/MetalTracer/: AppDelegate.mm  CMakeLists.txt  MetalRenderer.h  MetalRenderer.mm  MetalTracer.storyboard  RayTracer.cpp  RayTracer.h  Scene.cpp  ViewController.h  ViewController.mm  main.m
applications/MetalTriangle/: CMakeLists.txt  Info.plist.in
applications/UniversalAppTemplate/: CMakeLists.txt  MetalRenderer.mm
applications/UniversalAppTemplateCpp/: CMakeLists.txt  MetalRenderer.cpp  MetalRenderer.h  MetalRendererTriangle.cpp  MetalRendererTriangle.h  MetalViewDelegate.cpp  MetalViewDelegate.h  MetalViewDelegate.mm
applications/UniversalAppTemplateCpp/ios/: AppDelegate.mm  ViewController.mm
applications/UniversalAppTemplateCpp/macOS/: AppDelegate.h  AppDelegate.mm  ViewController.mm
cmake/Modules/: ImportedTargetsNix.cmake
cmake/modules/: import_bass.cmake  import_dispatch.cmake  import_ktx.cmake  import_pvrtex.cmake  ms_clang_scripts.cmake  msvc_scripts.cmake  thor_utils.cmake  xcode_ios_scripts.cmake  xcode_macos_scripts.cmake
cmake/toolchains/: ios.cmake
conan/: debug_profile_macos  debug_profile_win
doc/build_dispatch/: my_atomic.h  vcvars.ps1
include/Containers/: Singleton.h  ThHash.h  ThHashMap.h  ThHashSet.h  ThVector.h  TheContainerException.h
include/Debug/: ThLogger.h
include/Filesystem/: FSLibConfig.h  LibFileSystem.h  LoggerFileOutput.h  PhysFileStream.h  StdFileSystem.h  ThiDataStream.h  ThiFileSystem.h  ThiMemoryStream.h
include/Math/: Allocators.h  AxisAlignedBox.h  Decompose.h  ExpressionNodes.h  FixedMatrix.h  FixedMatrixFwd.h  FixedMatrixGeneric.inl  Math.h  (+9 more)
lib/: CMakeLists.txt
lib/Core/: CMakeLists.txt  ThCore.cpp
lib/Core/Concurrent/: ThDispatch.cpp
lib/Core/Containers/: Singleton.cpp
lib/Core/Debug/: ThAssert.cpp  ThLogger.cpp
lib/Core/Filesystem/: FSExceptions.cpp  LibFileSystem.cpp  LoggerFileOutput.cpp  PhysFileStream.cpp  PhysFileSystem.cpp  StdFileSystem.cpp  StlFileStream.cpp  ThWinDynamicLibrary.cpp  ThiDataStream.cpp  ThiDynamicLibrary.cpp  ThiFileStream.cpp  ThiFileSystem.cpp  ThiMemoryStream.cpp
lib/Core/Hash/: ThCrc32.cpp  ThIntHash.cpp  ThMurmurHash.cpp  ThMurmurHash3.cpp  ThSha3.cpp  ThSipHash.cpp
lib/Core/Memory/: ThAllocators.cpp  ThGrowingPoolAllocator.cpp  ThMemory.cpp  ThPoolAllocator.cpp  ThSmallMemoryAllocator.cpp  ThStackAllocator.cpp  ThSystemAllocator.cpp  ThVirtualGrowingStackAllocator.cpp  ThVirtualPoolAllocator.cpp  ThVirtualSmallMemoryAllocator.cpp  ThVirtualStackAllocator.cpp  ThiMemoryAllocator.cpp
lib/Core/Platform/: ThPlatformUtils.cpp
lib/Core/Rtti/: ThException.cpp  ThRttiManager.cpp  ThiObject.cpp  ThiRtti.cpp
lib/Core/String/: ThString.cpp  ThStringUtilities.cpp
lib/Core/Util/: ThUidGenerator.cpp
lib/Core/include/: CoreExport.h
lib/Core/include/Containers/: ThDelegate.h  ThFlags.h
lib/Core/include/Debug/: ThAssert.h
lib/Core/include/Filesystem/: FSExceptions.h  PhysFileSystem.h  StlFileStream.h  ThiDynamicLibrary.h  ThiFileStream.h
lib/Core/include/Platform/: ThPlatformUtils.h
lib/Core/include/Rtti/: ThException.h  ThTypeInfo.h  ThiObject.h  ThiRtti.h
lib/Core/src/Containers/: Singleton.cpp
lib/Core/src/Debug/: ThAssert.cpp  ThLogger.cpp
lib/Core/src/Filesystem/: FSExceptions.cpp  LoggerFileOutput.cpp
lib/Core/src/Platform/: ThPlatformUtils.cpp  ThWinSystemWindow.cpp
lib/Core/src/Rtti/: ThiRtti.cpp
lib/ECS/: CMakeLists.txt  ThScene.cpp  ThWorld.cpp
lib/Engine/: CMakeLists.txt  ThBlackboard.cpp  ThClusterGridComponent.cpp  ThClusterHashComponent.cpp  ThEntityManager.cpp  ThEventManager.cpp  ThSystemComponent.cpp
lib/Math/: CMakeLists.txt  MatrixDecompose.cpp  ThMathReflection.cpp  decompose.c
lib/Math/include/: EulerAngles.h  FixedVectorFwd.h  OpTags.h  Plane.h  Ray.h  ThMathReflection.h
lib/Math/include/Math/: EulerAnglesFwd.h  ListConstructor.h  ThorMath.h  ThorMathExport.h
lib/Math/include/Math/Nurbs/: NurbsCurve.h
lib/Math/include/Nurbs/: NurbsCurveTool.h
lib/MetalCpp/: CMakeLists.txt  Implementation.cpp  Implementation.mm
lib/MetalRenderer/: CMakeLists.txt  ThMetalContext.cpp  ThMetalRenderer.cpp  ThMetalUtils.cpp
lib/SimdMath/: CMakeLists.txt  ThGraphics.cpp
submodules/: CMakeLists.txt  README.md
submodules/angelscript/angelscript/projects/cmake/: CMakeLists.txt
submodules/libwebp/: CMakeLists.txt
templates/: CMakeLists.txt
templates/macOS/: AppDelegate.m  CMakeLists.txt  Info.plist.in
tests/: CMakeLists.txt
tests/MetalTracer/: CMakeLists.txt  Info.plist.in  MetalTracer.storyboard  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shaders.metal  ViewController.mm
tests/MetalTriangle/: CMakeLists.txt  Main.storyboard  MetalTriangle.storyboard  ViewController.h  ViewController.mm
tests/experiments/: CMakeLists.txt  TestContainers.cpp  TestFileSystem.cpp  TestRefPtr.cpp  TestReflection.cpp  TestSSE.cpp
(+213 files in other folders)
